# Classification-Risque-Credit-Pipeline-MLOps-

./: .gitignore  Dockerfile  GUIDE D’EXÉCUTION.txt  P6_202602.ipynb  README.md  check.py  deploy_to_hf.py  environment.yml  mlflow.db  new.py  pyproject.toml  requirements.txt  send_batch_request.py  test_api_unique.py
.github/workflows/: cd.yml  ci.yml
App/: app.py  app_gradio.py  column_mapping.json  generate_example.py  generate_pydantic_model.py  main.py  models.py
BestModel/: best_model.joblib  best_model_name.txt  best_run_id.txt  pipeline_complet.joblib
Monitoring/: analyse_drift.py  dashboard.py  drift_report.json  test_drift.py
Notesbooks/: Notebook_Cleaning-Viz_022026.ipynb  Notebook_Data-Preparation_022026.ipynb  Notebook_Features-Imp-SHAP_022026.ipynb  Notebook_Model-Training-MLFlow_022026.ipynb  drift_performance_analysis.ipynb  performance_analysis.ipynb  profiling.prof
data/: app_test_small.joblib
logs/: predictions_log.jsonl  predictions_log.parquet  predictions_log_batch.parquet  preparation_logs.py
mlruns/1/models/m-3d222406fd4c4ab9917f1350dcda9263/artifacts/: MLmodel  conda.yaml  model.pkl  python_env.yaml  requirements.txt
tests/: conftest.py  utils.py
tests/fonctionnels/: test_api_startup.py  test_invalid_age.py  test_invalid_income.py  test_predict_missing_values.py  test_predict_out_of_range.py  test_predict_valid.py
tests/unitaires/: test_model_loaded.py  test_pipeline.py  test_schema.py
