[project]
name = "projet6"
version = "0.1.0"
description = ""
authors = [
    {name = "Aurélie GABU",email = "aurelie.gabu@gmail.com"}
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "pandas ==2.2.3",
    "numpy ==1.26.4",
    "scikit-learn ==1.4.2",
    "matplotlib ==3.8.4",
    "seaborn ==0.13.2",
    "scipy ==1.12.0",
    "shap ==0.49.1",
    "xgboost ==2.0.3",
    "optuna ==3.6.1",
    "category-encoders ==2.6.3",
    "catboost ==1.2.7",
    "numba ==0.59.1",
    "llvmlite ==0.42.0",
    "ipykernel>=6.25,<7.0",
    "huggingface-hub ==1.3.1",
    "fastapi ==0.115.0",
    "uvicorn ==0.30.1",
    "python-dotenv ==1.2.1",
    "psycopg2-binary ==2.9.11",
    "pytest-cov ==7.0.0",
    "gradio==4.44.0",
    "requests (>=2.34.2,<3.0.0)",
    "evidently==0.4.25",
    "streamlit==1.29.0",
    "jupyter==1.0.0",
    "notebook==6.5.5",
    "jupyter-client==7.4.9",
    "jupyter-core==5.5.0",
    "ipykernel==6.25.2"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
